--- a/ProgrammeringCSharp3/Assignment3/QuizApplication/MainWindow.xaml
+++ b/ProgrammeringCSharp3/Assignment3/QuizApplication/MainWindow.xaml
@@ -72,8 +72,15 @@
                                 <Image Source="/QuizApplication;component/Icons/icons8_search.png" Height="32" Width="32" DockPanel.Dock="Left"/>
                             </Button.Content>
                         </Button>
-                        <TextBox x:Name="SearchTermTextBox" Width="300" Height="32" Visibility="Hidden"/>
+                        <TextBox x:Name="SearchTermTextBox" KeyUp="SearchTermTextBox_KeyUp" Width="300" Height="32" Visibility="Hidden"/>
                     </WrapPanel>
+                    <ListBox x:Name="SearchResults" Visibility="Hidden">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Title}"/>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
                 </StackPanel>
             </Border>
             <TabControl x:Name="QuestionsAnswersTabControl" Grid.Column="1" IsEnabled="False">
