--- a/ProgrammeringCSharp3/Assignment3/QuizApplication/MainWindow.xaml
+++ b/ProgrammeringCSharp3/Assignment3/QuizApplication/MainWindow.xaml
@@ -22,111 +22,120 @@
             <Setter Property="Margin" Value="0 0 5 0"/>
         </Style>
     </Window.Resources>
-    <DockPanel>
-        <Menu DockPanel.Dock="Top">
-            <MenuItem Header="File">
-                <MenuItem x:Name="LoadFromXMLMenuItem" Header="Load from xml" Click="LoadFromXMLMenuItem_Click"/>
-                <MenuItem x:Name="SaveToXMLMenuItem" Header="Save to xml" Click="SaveToXMLMenuItem_Click"/>
-            </MenuItem>
-        </Menu>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
+    <ScrollViewer>
+        <DockPanel>
+            <Menu DockPanel.Dock="Top">
+                <MenuItem Header="File">
+                    <MenuItem x:Name="LoadFromXMLMenuItem" Header="Load from xml" Click="LoadFromXMLMenuItem_Click"/>
+                    <MenuItem x:Name="SaveToXMLMenuItem" Header="Save to xml" Click="SaveToXMLMenuItem_Click"/>
+                </MenuItem>
+            </Menu>
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <StackPanel Grid.Row="0">
-                    <WrapPanel>
-                        <Label Content="QuizName"/>
-                        <TextBox x:Name="QuizNameTextBox"/>
-                    </WrapPanel>
-                    <WrapPanel>
-                        <Label Content="QuizDescription"/>
-                        <TextBox x:Name="QuizDescriptionTextBox"/>
-                    </WrapPanel>
-                </StackPanel>
-                <Button x:Name="CreateQuizButton" Content="Create Quiz" Click="CreateQuizButton_Click" Grid.Row="1" Width="100"/>
-            </Grid>
-            <Border x:Name="ListQuizBorder" Grid.Row="1">
-                <StackPanel>
-                    <DockPanel>
-                        <Button x:Name="ChangeQuiz" Content="Edit quiz" DockPanel.Dock="Left" Width="100" Click="ChangeQuizButton_Click"/>
-                        <Button x:Name="DeleteQuiz" Content="Delete quiz" Click="DeleteQuizButton_Click" DockPanel.Dock="Right" Width="100"/>
-                    </DockPanel>
-                    <ListView x:Name="QuizesListView" SelectionChanged="QuizesListView_SelectionChanged">
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Header="QuizName" DisplayMemberBinding="{Binding Title}" Width="190" />
-                                <GridViewColumn Header="QuizDescription" DisplayMemberBinding="{Binding Description}" Width="190" />
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
-                    <WrapPanel HorizontalAlignment="Right" Width="396">
-                        <Button x:Name="ShowSearchFieldButton" Click="ShowSearchFieldButton_Click" Background="White"  BorderThickness="0 0 1 0">
-                            <Button.Content>
-                                <Image Source="/QuizApplication;component/Icons/icons8_search.png" Height="32" Width="32" DockPanel.Dock="Left"/>
-                            </Button.Content>
-                        </Button>
-                        <TextBox x:Name="SearchTermTextBox" KeyUp="SearchTermTextBox_KeyUp" Width="300" Height="32" Visibility="Hidden"/>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="20"/>
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.Row="0">
                         <WrapPanel>
-                            <Label Content="Base Search On: " Padding="0"/>
-                            <RadioButton x:Name="SearchInQuizNameRaidoButton" IsChecked="True">Quiz Name</RadioButton>
-                            <RadioButton x:Name="SearchInAnswers">Answers</RadioButton>
-                            <RadioButton x:Name="SearchInQuestions">Questions</RadioButton>
+                            <Label Content="QuizName"/>
+                            <TextBox x:Name="QuizNameTextBox"/>
                         </WrapPanel>
-                    </WrapPanel>
-                    <ListBox x:Name="SearchResults" Visibility="Hidden">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Title}"/>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-                </StackPanel>
-            </Border>
-            <TabControl x:Name="QuestionsAnswersTabControl" Grid.Column="1" IsEnabled="False">
-                <TabItem x:Name="QuestionsTabItem" Header="Questions">
-                    <StackPanel>
-                        <WrapPanel Margin="0 0 0 10">
-                            <Button Content="Add Question" Margin="0 0 5 0" Click="AddQuestionButton_Click"/>
-                            <Button Content="Edit question" Click="EditQuestionButton_Click"/>
-                            <Button Content="Delete Question" Margin="5 0 0 0" Click="DeleteQuestionButton_Click"/>
+                        <WrapPanel>
+                            <Label Content="QuizDescription"/>
+                            <TextBox x:Name="QuizDescriptionTextBox"/>
                         </WrapPanel>
-                        <ListView x:Name="QuestionsOfSelectedQuizListView" SelectionChanged="QuestionsOfSelectedQuizListView_SelectionChanged">
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding Title}"/>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
                     </StackPanel>
-                </TabItem>
-                <TabItem x:Name="AnswersTabItem" Header="Answers">
+                    <Button x:Name="CreateQuizButton" Content="Create Quiz" Click="CreateQuizButton_Click" Grid.Row="1" Width="100"/>
+                </Grid>
+                <Border x:Name="ListQuizBorder" Grid.Row="1">
                     <StackPanel>
-                        <WrapPanel Margin="0 0 0 10">
-                            <Button Content="Add answer" Click="AddAnswerButton_Click" Margin="0 0 5 0"/>
-                            <Button Content="Edit answer" Click="EditAnswerButton_Click"/>
-                            <Button Content="Delete answer" Click="DeleteAnswerButton_Click" Margin="5 0 0 0"/>
-                        </WrapPanel>
-                        <ListView x:Name="AnswersOfSelectedQuestionListView">
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding Title}"/>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
+                        <DockPanel>
+                            <Button x:Name="ChangeQuiz" Content="Edit quiz" DockPanel.Dock="Left" Width="100" Click="ChangeQuizButton_Click"/>
+                            <Button x:Name="DeleteQuiz" Content="Delete quiz" Click="DeleteQuizButton_Click" DockPanel.Dock="Right" Width="100"/>
+                        </DockPanel>
+                        <ListView x:Name="QuizesListView" SelectionChanged="QuizesListView_SelectionChanged">
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn Header="QuizName" DisplayMemberBinding="{Binding Title}" Width="190" />
+                                    <GridViewColumn Header="QuizDescription" DisplayMemberBinding="{Binding Description}" Width="190" />
+                                </GridView>
+                            </ListView.View>
                         </ListView>
+                        <StackPanel HorizontalAlignment="Left" Margin="0">
+                            <WrapPanel>
+                                <Button x:Name="ShowSearchFieldButton" Click="ShowSearchFieldButton_Click" Background="White"  BorderThickness="0 0 1 0" ToolTip="Click to show search functionality">
+                                    <Button.Content>
+                                        <Image Source="/QuizApplication;component/Icons/icons8_search.png" Height="32" Width="32" DockPanel.Dock="Left"/>
+                                    </Button.Content>
+                                </Button>
+                                <TextBox x:Name="SearchTermTextBox" KeyUp="SearchTermTextBox_KeyUp" Width="300" Height="32" Visibility="Hidden"/>
+                            </WrapPanel>
+                            <GroupBox x:Name="SearchGroupBox" Visibility="Hidden">
+                                <StackPanel>
+                                    <WrapPanel>
+                                        <Label Content="Base Search On: " Padding="0"/>
+                                        <RadioButton x:Name="SearchInQuizNameRaidoButton" IsChecked="True">Quiz Name</RadioButton>
+                                        <RadioButton x:Name="SearchInAnswersRadioButton">Answers</RadioButton>
+                                        <RadioButton x:Name="SearchInQuestionsRadioButton">Questions</RadioButton>
+                                    </WrapPanel>
+                                    <Label FontWeight="Bold">Search results:</Label>
+                                    <ListBox x:Name="SearchResultsListBox">
+                                        <ListBox.ItemTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Text="{Binding Title}"/>
+                                            </DataTemplate>
+                                        </ListBox.ItemTemplate>
+                                    </ListBox>
+                                </StackPanel>
+                            </GroupBox>
+                        </StackPanel>
                     </StackPanel>
-                </TabItem>
-            </TabControl>
-            <StackPanel x:Name="UcContainer" Grid.Row="1" Grid.Column="1" Margin="10 0"></StackPanel>
-        </Grid>
-    </DockPanel>
+                </Border>
+                <TabControl x:Name="QuestionsAnswersTabControl" Grid.Column="1" IsEnabled="False">
+                    <TabItem x:Name="QuestionsTabItem" Header="Questions">
+                        <StackPanel>
+                            <WrapPanel Margin="0 0 0 10">
+                                <Button Content="Add Question" Margin="0 0 5 0" Click="AddQuestionButton_Click"/>
+                                <Button Content="Edit question" Click="EditQuestionButton_Click"/>
+                                <Button Content="Delete Question" Margin="5 0 0 0" Click="DeleteQuestionButton_Click"/>
+                            </WrapPanel>
+                            <ListView x:Name="QuestionsOfSelectedQuizListView" SelectionChanged="QuestionsOfSelectedQuizListView_SelectionChanged">
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Title}"/>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                        </StackPanel>
+                    </TabItem>
+                    <TabItem x:Name="AnswersTabItem" Header="Answers">
+                        <StackPanel>
+                            <WrapPanel Margin="0 0 0 10">
+                                <Button Content="Add answer" Click="AddAnswerButton_Click" Margin="0 0 5 0"/>
+                                <Button Content="Edit answer" Click="EditAnswerButton_Click"/>
+                                <Button Content="Delete answer" Click="DeleteAnswerButton_Click" Margin="5 0 0 0"/>
+                            </WrapPanel>
+                            <ListView x:Name="AnswersOfSelectedQuestionListView">
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Title}"/>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                        </StackPanel>
+                    </TabItem>
+                </TabControl>
+                <StackPanel x:Name="UcContainer" Grid.Row="1" Grid.Column="1" Margin="10 0"></StackPanel>
+            </Grid>
+        </DockPanel>
+    </ScrollViewer>
 </Window>
