Refactoring Cancellation of tasks

--- a/ProgrammeringCSharp3/Assignment5Alt1/Assignment5Alt1/MainWindow.xaml
+++ b/ProgrammeringCSharp3/Assignment5Alt1/Assignment5Alt1/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Assignment5Alt1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Closing="Window_Closing">
     <Window.Resources>
         <LinearGradientBrush StartPoint="0,1" EndPoint="0,0" x:Key="BtnsBg">
             <GradientStop Offset="0.1" Color="Black"/>
