--- a/ProgrammeringCSharp3/Assignment6/Assignment6/MainWindow.xaml
+++ b/ProgrammeringCSharp3/Assignment6/Assignment6/MainWindow.xaml
@@ -12,7 +12,7 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="188"/>
+            <RowDefinition Height="258"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <GroupBox Header="DiagramSettings">
@@ -23,23 +23,37 @@
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30"/>
-                    <RowDefinition Height="30"/>
-                    <RowDefinition Height="30"/>
-                    <RowDefinition Height="30"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="40"/>
                     <RowDefinition Height="40"/>
                 </Grid.RowDefinitions>
-                    <Label Content="Diagram tiutle"/>
-                    <TextBox x:Name="DiaTitleTextBox" Grid.Column="1"/>
-                    
-                    <Label Content="Diagram divisions" Grid.Row="1"/>
-                    <TextBox x:Name="DiaDivisionsTextBox" Grid.Row="1" Grid.Column="1"/>
+                <Label Content="Diagram title"/>
+                <TextBox x:Name="DiaTitleTextBox" Grid.Column="1"/>
+
+                <Label Content="Diagram divisions" Grid.Row="1"/>
+                <StackPanel Grid.Row="1" Grid.RowSpan="2" Grid.Column="1">
+                    <WrapPanel Margin="5 0 0 0">
+                        <TextBlock Text="X:" Margin="0 5 0 0"/>
+                        <TextBlock Text="Y:" Margin="35 5 0 0"/>
+                    </WrapPanel>
+                    <WrapPanel Grid.Column="1" Margin="5 1 0 0">
+                        <TextBox x:Name="DiaDivisionsXAxisTextBox" Width="35"/>
+                        <TextBox x:Name="DiaDivisionsYAxisTextBox" Margin="8 0 0 0" Width="35"/>
+                    </WrapPanel>
+                </StackPanel>
 
                 <Label Content="Diagram intervall" Grid.Row="2"/>
-                <WrapPanel Grid.Row="2" Grid.Column="1" Margin="5 1 0 0">
-                    <TextBox x:Name="DiaIntervalMinTextBox" Width="35"/>
-                    <TextBlock Text=" - " Margin="0 5 0 0"/>
-                    <TextBox x:Name="DiaIntervalMaxTextBox" Width="34"/>
-                </WrapPanel>
+                <StackPanel Grid.Row="2" Grid.Column="1">
+                    <WrapPanel Margin="5 0 0 0">
+                        <TextBlock Text="X:" Margin="0 5 0 0"/>
+                        <TextBlock Text="Y:" Margin="35 5 0 0"/>
+                    </WrapPanel>
+                    <WrapPanel Grid.Column="1" Margin="5 1 0 0">
+                        <TextBox x:Name="DiaIntervalXAxisTextBox" Width="35"/>
+                        <TextBox x:Name="DiaIntervalYAxisTextBox" Margin="8 0 0 0" Width="35"/>
+                    </WrapPanel>
+                </StackPanel>
 
                 <Label Content="Intervall step" Grid.Row="3"/>
                 <TextBox x:Name="DiaIntervallStepTextBox" Grid.Row="3" Grid.Column="1"/>
@@ -69,7 +83,7 @@
             </Grid>
         </GroupBox>
         <GroupBox Header="Diagram" Grid.Column="1" Grid.RowSpan="2">
-            
+
             <Grid x:Name="DiagramGrid"></Grid>
         </GroupBox>
     </Grid>
