--- a/ProgrammeringCSharp3/Assignment6/Assignment6/App.xaml
+++ b/ProgrammeringCSharp3/Assignment6/Assignment6/App.xaml
@@ -6,7 +6,7 @@
     <Application.Resources>
         <Style x:Key="MyButtonStyle" TargetType="{x:Type Button}">
             <Setter Property="Height" Value="30"/>
-            <Setter Property="Width" Value="80"/>
+            <Setter Property="MinWidth" Value="80"/>
             <Setter Property="Margin" Value="0 5 0 0"/>
             <Setter Property="Template">
                 <Setter.Value>
@@ -26,6 +26,18 @@
                             <ControlTemplate TargetType="{x:Type Button}">
                                 <Grid>
                                     <Border BorderBrush="Black" BorderThickness="1" CornerRadius="4" Background="Green"/>
+                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                </Grid>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type Button}">
+                                <Grid>
+                                    <Border BorderBrush="Black" BorderThickness="1" CornerRadius="4" Background="LightGray"/>
                                     <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                                 </Grid>
                             </ControlTemplate>
