Changes made: - Refactored points generation - Fixed removal of diagram - Diagram canvas now sized according to ActualWidth of parent column

--- a/ProgrammeringCSharp3/Assignment6/Assignment6/MainWindow.xaml
+++ b/ProgrammeringCSharp3/Assignment6/Assignment6/MainWindow.xaml
@@ -89,7 +89,7 @@
                     <Button x:Name="SavePointButton" Grid.Row="3" Content="Save Point" Style="{StaticResource MyButtonStyle}" Click="SavePointButton_Click"/>
                 </Grid>
             </GroupBox>
-            <GroupBox Header="Diagram" Grid.Column="1" Grid.RowSpan="2">
+            <GroupBox x:Name="DiagramGroupBox" Header="Diagram" Grid.Column="1" Grid.RowSpan="2">
 
                 <Grid x:Name="DiagramGrid">
                     <Grid.RowDefinitions>
