Changes made: - Rebuilt how points are added. - Points can now be sorted. - Now using InvalidateVisual so that the main components of the diagram are created independent of adding data points

--- a/ProgrammeringCSharp3/Assignment6/Assignment6/MainWindow.xaml
+++ b/ProgrammeringCSharp3/Assignment6/Assignment6/MainWindow.xaml
@@ -12,8 +12,8 @@
                 <MenuItem Header="Ëxit Application"/>
             </MenuItem>
             <MenuItem Header="Data">
-                <MenuItem Header="Sort X axis points"/>
-                <MenuItem Header="Sort Y axis points"/>
+                <MenuItem x:Name="SortXPointsMenuItewm" Header="Sort X axis points" Click="SortXPointsMenuItewm_Click"/>
+                <MenuItem x:Name="SortYPointsMenuItewm" Header="Sort Y axis points" Click="SortYPointsMenuItewm_Click"/>
             </MenuItem>
         </Menu>
         <Grid>
