--- a/ProgrammeringCSharp3/Assignment6/Assignment6/MainWindow.xaml
+++ b/ProgrammeringCSharp3/Assignment6/Assignment6/MainWindow.xaml
@@ -18,7 +18,7 @@
         </Menu>
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="210"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
@@ -86,7 +86,8 @@
                     <Label Content="New Y Point" Grid.Row="1"/>
                     <TextBox x:Name="PointYTextBox" Grid.Row="1" Grid.Column="1"/>
                     <ListBox x:Name="PointsListBox" Grid.Row="2" MinHeight="100" Grid.ColumnSpan="2" Margin="0 5 0 0"/>
-                    <Button x:Name="SavePointButton" Grid.Row="3" Content="Save Point" Style="{StaticResource MyButtonStyle}" Click="SavePointButton_Click"/>
+                    <Button x:Name="SavePointButton" Grid.Row="3" Content="Save Point" Style="{StaticResource MyButtonStyle}" Click="SavePointButton_Click" Margin="0 5 5 0"/>
+                    <Button x:Name="RemovePointButton" Grid.Row="3" Grid.Column="1" Content="Remove Point" Style="{StaticResource MyButtonStyle}" Click="RemovePointButton_Click"/>
                 </Grid>
             </GroupBox>
             <GroupBox x:Name="DiagramGroupBox" Header="Diagram" Grid.Column="1" Grid.RowSpan="2">
